    a Unicode::String (as this causes an error).
 - Updated copyright statement to 2004!
 - XML to_string function now correctly handles <!-- comments -->
 - ordervalue for an undefined int is now "" (was causing warning)

======================================================================
04/03/2004 - EPRINTS-2.3.3
======================================================================

2004-07-05 cjg

 - Cleaned up some error messages
 - Fixed bug in oai2 interface that sometimes printed empty 
    resumption tokens.
 - Changed options to /bin/cp in Document.pm to some which should
    work on more platforms.
 - Some validation things in EPrint never got added to @problems
    list. Fixed.
 - Fixed bug in new subjects input field, didn't add subjects which
    were top level. 
 - Fixed bug with changing username.
 - XML exported now strips xmlns attributes so that output is legal
    XHTML.
 - XML comments should now be exported correctly.
 - Upped maximum pagerange field width to 120 from 10.
 - Fixed typo in system phrases.

======================================================================
06/07/2004 - EPRINTS-2.3.4
======================================================================

2004-08-06 cjg

 - Added Hungarian chars to freetext index map
 - New options to indexer --once, --notdaemon, --loglevel, --rollcount
 - Indexer now creates log files
 - Commented-out un-needed command in SearchExpression
 - Fixed xmlns filtering so it only occurs on XHTML output, not XML
 - Fixed a call in Config to use AnApache, so it'll work with v1.3 & 2
 - Fixed a bug in MetaField/Set; it didn't show the currently 
    selected value in any/all menus.
 - documents_url option removed. It's hardwired to /archive/ in lots
    of places.
 - Added support for short URLs for records, so you can use
    /33/ instead of /archive/00000033/
 - added config option 'shorturl' to make the short version the
    canonnical one. 
